# Rectangle-OS

./: Cargo.toml  README.md  x86_64-reco_os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
