[package]
name = "reco_os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reco_os"
test = true

[dependencies]
bootloader = "0.9.23" 
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
